log
Thu 20 Apr 2023 11:23:20 PM UTC: 
 tests:  1|8
total_score: 0/70
b55e262
Fri 21 Apr 2023 01:09:39 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
b7143f1
Fri 21 Apr 2023 01:38:25 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:6: error: expected expression before ‘if’
   85 |     *if (tree->lower_than(current->pair->key,key) < 1){
      |      ^~
Compilation failed
2b045d9
Fri 21 Apr 2023 01:46:31 AM UTC: 
 treemap.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
treemap.c:85:30: error: expected ‘;’ before ‘return’
   85 |       tree->current = current
      |                              ^
      |                              ;
   86 |         return tree->current->pair;
      |         ~~~~~~                
Compilation failed
506209a
Fri 21 Apr 2023 01:46:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
Compilation failed
fd457c5
Fri 21 Apr 2023 01:47:10 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘Key’
   76 |     if ( current->Key > Key){
      |                 ^~
treemap.c:76:25: error: ‘Key’ undeclared (first use in this function); did you mean ‘key’?
   76 |     if ( current->Key > Key){
      |                         ^~~
      |                         key
treemap.c:76:25: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘Key’
   80 |     if( current->Key < Key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘Key’
   84 |     if ( current->Key == Key){
      |                 ^~
Compilation failed
0782e3c
Fri 21 Apr 2023 01:47:42 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
Compilation failed
45a8a18
Fri 21 Apr 2023 01:48:44 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
Compilation failed
2d37d41
Fri 21 Apr 2023 01:49:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:75:17: error: ‘TreeMap’ has no member named ‘curent’; did you mean ‘current’?
   75 |   while ( tree->curent != NULL){
      |                 ^~~~~~
      |                 current
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
Compilation failed
3ada2b6
Fri 21 Apr 2023 01:49:33 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:17: error: ‘TreeNode’ has no member named ‘key’
   76 |     if ( current->key > key){
      |                 ^~
treemap.c:80:16: error: ‘TreeNode’ has no member named ‘key’
   80 |     if( current->key < key){
      |                ^~
treemap.c:84:17: error: ‘TreeNode’ has no member named ‘key’
   84 |     if ( current->key == key){
      |                 ^~
Compilation failed
bb0edce
Fri 21 Apr 2023 01:49:50 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:24: error: comparison of distinct pointer types lacks a cast [-Werror]
   76 |     if ( current->pair > key){
      |                        ^
treemap.c:80:23: error: comparison of distinct pointer types lacks a cast [-Werror]
   80 |     if( current->pair < key){
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
21f4573
Fri 21 Apr 2023 01:50:14 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:24: error: comparison of distinct pointer types lacks a cast [-Werror]
   76 |     if ( current->pair > key){
      |                        ^
treemap.c:80:23: error: comparison of distinct pointer types lacks a cast [-Werror]
   80 |     if( current->pair < key){
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
1965dbe
